--- a/exp2/dl2.yaml
+++ b/exp2/dl2.yaml
@@ -17,7 +17,7 @@
                  !obj:pylearn2.models.mlp.PretrainedLayer
                  {
                      layer_name : 'h2',
-                     layer_content: !pkl: "%(save_path)s/dl2_l2_rbm.pkl"
+                     layer_content: !pkl: "%(save_path)s/dl2_l2_sde.pkl"
                  },
                  !obj:pylearn2.models.mlp.Softmax
                  {
@@ -67,7 +67,7 @@
         !obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest
         {
             channel_name: 'valid_y_misclass',
-            save_path: "%(save_path)s/dl2_grbm-sgd_best.pkl"
+            save_path: "%(save_path)s/dl2_grbm-dae-sgd_best.pkl"
         },
     ]
 }
