cross validation for mlp4

--- a/exp3_dbm-sr-bgd/mlp_tutorial_part_2.yaml
+++ b/exp3_dbm-sr-bgd/mlp_tutorial_part_2.yaml
@@ -19,7 +19,7 @@
                      irange: 0.
                  }
                 ],
-        nvis: 850,
+        nvis: %(nvis)i,
     },
 
     algorithm: !obj:pylearn2.training_algorithms.bgd.BGD
