--- a/exp3_dbm-sr-bgd/mlp_tutorial_part_3.yaml
+++ b/exp3_dbm-sr-bgd/mlp_tutorial_part_3.yaml
@@ -2,7 +2,7 @@
     dataset: &train !obj:pylearn2.scripts.med_ml.cin_feature2.CIN_FEATURE2
         {
             which_set: 'train',
-            datapath: %(data_path)s
+            data_path: %(data_path)s
         },
 
     model: !obj:pylearn2.models.mlp.MLP {
@@ -13,14 +13,14 @@
                  }, !obj:pylearn2.models.mlp.RectifiedLinear {
                      layer_name: 'h1',
                      dim: %(dim_h1)i,
-                     sparse_init: %(sparse_init_h1)i
+                     sparse_init: 15
                  }, !obj:pylearn2.models.mlp.Softmax {
                      layer_name: 'y',
                      n_classes: 2,
                      irange: 0.
                  }
                 ],
-        nvis: 1406,
+        nvis: %(nvis)i,
     },
 
     algorithm: !obj:pylearn2.training_algorithms.bgd.BGD
@@ -34,12 +34,12 @@
                 'valid' : !obj:pylearn2.scripts.med_ml.cin_feature2.CIN_FEATURE2
                 {
                     which_set: 'valid',
-                    datapath: %(data_path)s
+                    data_path: %(data_path)s
                 },
                 'test' : !obj:pylearn2.scripts.med_ml.cin_feature2.CIN_FEATURE2
                 {
                     which_set: 'test',
-                    datapath: %(data_path)s
+                    data_path: %(data_path)s
                 },
             },
         termination_criterion: !obj:pylearn2.termination_criteria.And {
@@ -56,7 +56,7 @@
         }
     },
     extensions: [ !obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest {
-             channel_name: 'test_y_misclass',
+             channel_name: 'valid_y_misclass',
              save_path: "%(save_path)s"
         },
     ]
