--- a/exp3_dbm-sr-bgd/mlp_tutorial_part_4.yaml
+++ b/exp3_dbm-sr-bgd/mlp_tutorial_part_4.yaml
@@ -2,24 +2,25 @@
     dataset: &train !obj:pylearn2.scripts.med_ml.cin_feature2.CIN_FEATURE2
         {
             which_set: 'train',
+            data_path: %(data_path)s
         },
 
     model: !obj:pylearn2.models.mlp.MLP {
-        layers: [ !obj:pylearn2.models.mlp.Sigmoid {
+        layers: [ !obj:pylearn2.models.mlp.RectifiedLinear {
                      layer_name: 'h0',
                      dim: %(dim_h0)i,
                      sparse_init: 15
-                 }, !obj:pylearn2.models.mlp.Sigmoid {
+                 }, !obj:pylearn2.models.mlp.RectifiedLinear {
                      layer_name: 'h1',
                      dim: %(dim_h1)i,
-                     sparse_init: %(sparse_init_h1)i
+                     sparse_init: 15
                  }, !obj:pylearn2.models.mlp.Softmax {
                      layer_name: 'y',
                      n_classes: 2,
                      irange: 0.
                  }
                 ],
-        nvis: 850,
+        nvis: %(nvis)i,
     },
 
     algorithm: !obj:pylearn2.training_algorithms.bgd.BGD
@@ -33,10 +34,12 @@
                 'valid' : !obj:pylearn2.scripts.med_ml.cin_feature2.CIN_FEATURE2
                 {
                     which_set: 'valid',
+                    data_path: %(data_path)s
                 },
                 'test' : !obj:pylearn2.scripts.med_ml.cin_feature2.CIN_FEATURE2
                 {
                     which_set: 'test',
+                    data_path: %(data_path)s
                 },
             },
         cost: !obj:pylearn2.costs.cost.SumOfCosts
@@ -46,7 +49,7 @@
                     !obj:pylearn2.costs.mlp.Default { },
                     !obj:pylearn2.costs.mlp.WeightDecay
                     {
-                        coeffs: [ .00005, .00005, .00005 ]
+                        coeffs: [ .0005, .0005, .0005 ]
                     }
             ]
         },
@@ -64,8 +67,8 @@
         }
     },
     extensions: [ !obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest {
-             channel_name: 'test_y_misclass',
-             save_path: "%(save_path)s/mlp2-sigmoid_best.pkl"
+             channel_name: 'valid_y_misclass',
+             save_path: "%(save_path)s"
         },
     ]
 }
