--- a/exp3_dbm-sr-bgd/mlp-pretrain0.yaml
+++ b/exp3_dbm-sr-bgd/mlp-pretrain0.yaml
@@ -1,26 +1,32 @@
 !obj:pylearn2.train.Train {
-    dataset: &train !obj:pylearn2.scripts.med_ml.cin_feature2_split.CIN_FEATURE2
+    dataset: &train !obj:pylearn2.scripts.med_ml.cin_feature2.CIN_FEATURE2
         {
             which_set: 'train',
-            data_path: %(data_path)s
+            datapath: %(data_path)s
         },
 
     model: !obj:pylearn2.models.mlp.MLP {
-        layers: [ !obj:pylearn2.models.mlp.RectifiedLinear {
-                     layer_name: 'h0',
-                     dim: %(dim_h0)i,
-                     sparse_init: 15
-                 }, !obj:pylearn2.models.mlp.RectifiedLinear {
-                     layer_name: 'h1',
-                     dim: %(dim_h1)i,
-                     sparse_init: 15
-                 }, !obj:pylearn2.models.mlp.Softmax {
-                     layer_name: 'y',
-                     n_classes: 2,
-                     irange: 0.
-                 }
-                ],
-        nvis: %(nvis)i,
+        layers:
+        [
+            !obj:pylearn2.models.mlp.PretrainedLayer
+            {
+                layer_name: 'h01',
+                layer_content: !pkl: "mlp4_1700.1700-on-feature850-2-1.pkl"
+            },
+            !obj:pylearn2.models.mlp.RectifiedLinear
+            {
+                layer_name: 'h2',
+                dim: %(dim_h2)i,
+                sparse_init: %(sparse_init_h1)i
+            },
+            !obj:pylearn2.models.mlp.Softmax
+            {
+                layer_name: 'y',
+                n_classes: 2,
+                irange: 0.
+            }
+        ],
+        nvis: 850,
     },
 
     algorithm: !obj:pylearn2.training_algorithms.bgd.BGD
@@ -31,13 +37,15 @@
         monitoring_dataset:
             {
                 'train' : *train,
-                'valid' : !obj:pylearn2.scripts.med_ml.cin_feature2_split.CIN_FEATURE2
+                'valid' : !obj:pylearn2.scripts.med_ml.cin_feature2.CIN_FEATURE2
                 {
                     which_set: 'valid',
+                    datapath: %(data_path)s
                 },
-                'test' : !obj:pylearn2.scripts.med_ml.cin_feature2_split.CIN_FEATURE2
+                'test' : !obj:pylearn2.scripts.med_ml.cin_feature2.CIN_FEATURE2
                 {
                     which_set: 'test',
+                    datapath: %(data_path)s
                 },
             },
         termination_criterion: !obj:pylearn2.termination_criteria.And {
@@ -54,7 +62,7 @@
         }
     },
     extensions: [ !obj:pylearn2.train_extensions.best_params.MonitorBasedSaveBest {
-             channel_name: 'test_y_misclass',
+             channel_name: 'valid_y_misclass',
              save_path: "%(save_path)s"
         },
     ]
